Global refactor and clean.